<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RC Speedo</string>

    <!-- UI/layout strings -->
    <!--  Main Screen -->
    <string name="main_title">RC Speedo</string>
    <string name="speed_default">0 MPH</string>
    <string name="highest_default">Highest Speed: 0 MPH</string>
    <string name="highest_speed">Highest Speed:</string>
    <string name="logging_status_startup">Not Logging</string>
    <string name="temperature_default">Temperature: 0F</string>
    <string name="start_listening">Start</string>
    <string name="stop_listening">Stop</string>
    <string name="start_logging">Start Logging</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="logging_to">Logging to:</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="navigation_drawer_title">RCSpeedo</string>

    <!--  Main Menu -->
    <string name="clear_speeds">Clear Speeds</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="hobbyking">HobbyKing</string>

    <!--  Logging Dialog-->
    <string name="logging">Logging</string>
    <string name="log_title">Log Manager</string>
    <string name="log_colon">Model: </string>
    <string name="log_name">Log Name:</string>
    <string name="status">Status: </string>
    <string name="default_status">Not Logging</string>
    <string name="number_entries">Number of Saved Logs: </string>
    <string name="create_new_log">Create New Model</string>
    <string name="delete_log">Delete Model</string>
    <string name="email_log">Email Logs for Selected Model</string>
    <string name="none">None</string>
    <string name="airplane">Airplane</string>
    <string name="pick_log">Pick a Log to Use</string>

    <!--  Create Log Dialog-->
    <string name="log_name_hint">Ex: F-16 Log #1</string>
    <string name="model_name_hint">Ex: Phase 3 F-16</string>
    <string name="create_log">Create Log</string>

    <!-- Pick Log Dialog -->
    <string name="logsel_prompt">Select a Log</string>
    <string name="use_log">Use Log</string>
    <string name="log_manager">Log Manager</string>
    <string name="cancel">Cancel</string>
    <string name="hint_text_log_extra_info">Enter any details about this flying session here. (e.g. Batteries used, weather, etc)</string>

    <!--  SettingsFragment Dialog -->
    <string name="settings_title">Settings</string>
    <string name="enable_sounds">Enable Sounds</string>
    <string name="enable_sounds_desc">Turn the voice that reports speeds on/off</string>
    <string name="change_doppler_mode">Change Doppler Mode</string>
    <string name="change_doppler_mode_desc">Some modes are better at detecting different speeds/models</string>
    <string name="change_units_of_speed">Change Units of Speed</string>
    <string name="change_units_of_speed_desc">Switch between MPH and Km/h.</string>
    <string name="change_temperature_unit">Change Temperature Unit</string>
    <string name="change_temperature_unit_desc">Switch between C and F.</string>
    <string name="enable_gps">Enable GPS Temperature</string>
    <string name="enable_gps_desc">Use the device\'s GPS to detect local temperature.</string>
    <string name="temperature">Outside Temperature</string>
    <string name="temperature_desc">Set the temperature here if GPS is disabled or weather info is unavailable.</string>

    <!-- Error messages -->
    <string name="err_no_mic">Could not use the microphone on your phone. Close app and relaunch to try again.</string>
    <string name="err_no_logs">You have not created any logs. Press OK to open the log manager.</string>
    <string name="err_no_log_selected">You do not have a log selected!</string>
    <string name="err_cannot_create_log">Not able to create the log! Do you have an SD card inserted?</string>
    <string name="err_name_required">You must enter a log name.</string>
    <string name="err_log_exists">This log name already exists, please try another name!</string>
    <string name="err_cannot_load_log">Internal Error: Could not pull up this log.</string>
    <string name="err_temp_not_number">Bad input: Temperature must be a number.</string>
    <string name="err_unlocker_default">Error unlocking app.</string>
    <string name="err_unlocker_unknown">Cannot Unlock: No Internet</string>
    <string name="err_no_google_account">Cannot Unlock: No Google Account</string>
    <string name="err_no_speeds">There are no speeds detected to save. Use this button after some speeds have been detected.</string>

    <string name="mail_speed_subject">RCSpeedo High Speed</string>
    <string name="mail_speed_pretext_no_model">My model airplane clocked </string>
    <string name="mail_speed_pretext_1">My </string>
    <string name="mail_speed_pretext_2"> clocked </string>
    <string name="mail_speed_promotionals"> on the Android #RCSpeedo App</string>

    <string name="cnfrm_title">Are you sure?</string>
    <string name="cnfrm_body">Are you sure you want to delete this log?</string>

    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="mps">m/s</string>
    <string name="kph">Km/h</string>
    <string name="mph">MPH</string>
    <string name="cl">Celsius</string>
    <string name="c">C</string>
    <string name="fl">Fahrenheit</string>
    <string name="f">F</string>

    <string-array name="available_modes">
        <item>Default Mode</item>
        <item>100MPH+ Mode</item>
        <item>Fast Pass Mode</item>
    </string-array>
    <string-array name="available_mode_ids">
        <item>default_mode</item>
        <item>hi_speed_mode</item>
        <item>fast_pass_mode</item>
        <item>quality_mode</item>
        <item>slow_mode</item>
    </string-array>
    <string-array name="available_speed_units">
        <item>MPH</item>
        <item>Km/h</item>
        <item>m/s</item>
    </string-array>
    <string-array name="available_speed_units_vocal">
        <item>miles per hour</item>
        <item>kilometers per hour</item>
        <item>meters per second</item>
    </string-array>
    <string-array name="available_temp_units">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
