<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sounds_enable"
        android:summary="@string/enable_sounds_desc"
        android:title="@string/enable_sounds"></CheckBoxPreference>
    <ListPreference
        android:defaultValue="default_mode"
        android:entries="@array/available_modes"
        android:entryValues="@array/available_mode_ids"
        android:key="change_mode"
        android:summary="@string/change_doppler_mode_desc"
        android:title="@string/change_doppler_mode"></ListPreference>
    <ListPreference
        android:defaultValue="MPH"
        android:entries="@array/available_speed_units"
        android:entryValues="@array/available_speed_units"
        android:key="speed_unit"
        android:summary="@string/change_units_of_speed_desc"
        android:title="@string/change_units_of_speed"></ListPreference>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_gps"
        android:summary="@string/enable_gps_desc"
        android:title="@string/enable_gps"></CheckBoxPreference>
    <EditTextPreference
        android:defaultValue="70"
        android:key="hard_temp"
        android:summary="@string/temperature_desc"
        android:title="@string/temperature"></EditTextPreference>
    <ListPreference
        android:defaultValue="Fahrenheit"
        android:entries="@array/available_temp_units"
        android:entryValues="@array/available_temp_units"
        android:key="temperature_unit"
        android:summary="@string/change_temperature_unit_desc"
        android:title="@string/change_temperature_unit"></ListPreference>
</PreferenceScreen>
