<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_screen_nav_button"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/main_title" />
        <item
            android:id="@+id/clear_speeds"
            android:icon="@android:drawable/ic_menu_delete"
            android:checkable="false"
            android:title="@string/clear_speeds" />
        <item
            android:id="@+id/log_manager_nav_button"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/log_manager" />
        <item
            android:id="@+id/settings_nav_button"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
        <item
            android:id="@+id/help_nav_button"
            android:icon="@android:drawable/ic_menu_help"
            android:checkable="false"
            android:title="@string/help" />
    </group>

</menu>
