<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:paddingLeft="10dp"
  android:paddingRight="10dp"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<Spinner android:id="@+id/lAvailableLogs" 
		android:prompt="@string/logsel_prompt"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"></Spinner>
	<EditText
		android:id="@+id/tExtraInfo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:lines="3"
		android:minLines="3"
		android:gravity="top|left"
		android:scrollbars="vertical"
		android:layout_below="@id/lAvailableLogs"
		android:hint="@string/hint_text_log_extra_info"
	/>
    <RelativeLayout
    	  android:id="@+id/rlLoggingChoice"
		  android:orientation="horizontal"
    	  android:layout_alignParentLeft="true"
    	  android:layout_below="@id/tExtraInfo"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
	    <Button
	    	android:id="@+id/bPickLog"
	    	android:paddingLeft="10dp"
	    	android:paddingRight="10dp"
	    	android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/ok"></Button>
	    <Button
	    	android:id="@+id/bCancelLogging"
	    	android:paddingLeft="20dp"
	    	android:paddingRight="20dp"
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/cancel"></Button>
    </RelativeLayout>
</RelativeLayout>
